<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wsr_food">WSR Food</string>
    <string name="fastest_delivery">Fastest Delivery 24/7</string>
    <string name="welcome">Welcome To WSR Food</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register Now</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="home">home</string>
    <string name="shopping">Shopping</string>
    <string name="profile">profile</string>
    <string name="history">history</string>
    <string name="veggieTomatoMix">Veggie\ntomato\nmix</string>
    <string name="skip_authorization">Skip Authorization</string>
    <string name="results">Results</string>
    <string name="search">Search</string>
    <string name="choose_address">Выберите адрес доставки</string>
</resources>